# jsenv

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gn  .prettierignore  BUILD.gn  Dockerfile  LICENSE  NOTICE  README.md  build_upload.py  gen_aar.py  prebuilt.gni  v8-build-0.0.5.tgz
.github/workflows/: CI.yml
gradle/: build.gradle  gradle.properties  local.properties  release-as-aar.gradle
src/main/: AndroidManifest.xml
src/main/java/com/eclipsesource/v8/: LibraryLoader.java  Platform.java  PlatformDetector.java  V8.java
src/main/java/com/eclipsesource/v8/debug/mirror/: FunctionMirror.java
src/main/java/com/eclipsesource/v8/utils/: V8Map.java  V8ObjectUtils.java  V8PropertyMap.java
src/main/jni/: JSEnv-v1000.h  com_eclipsesource_v8_V8Impl.cpp  com_eclipsesource_v8_V8Impl.h  hybrid-builtins.cpp  hybrid-console.cpp  hybrid-console.h  hybrid-hook.h  hybrid-log.h  hybrid-mksnapshot.cc  inspector-js-api.cpp  inspector-js-api.h  inspector-proxy.cpp  inspector-proxy.h  j2v8-runtime.h  jsclass.cpp  jsclass.h  jsenv-impl-v1000.h  jsenv-impl.cpp  jsenv-impl.h  jsvalue_impl.h  logcat-console.cpp  logcat-console.h
src/main/jni/base/time/: base_export.h  macros.h  time.cc  time.h
src/main/jni/builtins/: LICENSE.TXT  int_endianness.h  int_lib.h  int_types.h  int_util.h  moddi3.c  udivdi3.c  udivmoddi4.c  umoddi3.c
src/main/jni/include/: JSEnv.h
src/main/jni/test/: class_test1.js  js_gtest_gen.py  jsenv_unittest.cpp  test_help.cpp  test_help.h
v8-build/: .gitignore
v8-build-patch/: build_v8.py
v8-build-patch/wrapper/: console.h  inspector.h  wrapper-console.cc  wrapper-inspector.cc
v8-build/v8/: BUILD.gn
v8-build/v8/src/: build_v8.py
v8-build/v8/src/patch/: 0001-Merged-compiler-Fix-bug-in-SimplifiedLowering-s-over.patch  BUILD.gn.patch  v8-debugger-agent-impl.cc.patch
v8-build/v8/src/wrapper/: console.h  inspector.h  wrapper-console.cc  wrapper-inspector.cc
